--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -34,6 +34,8 @@ Interested? Refer to <<Quick-Start>> below to get started. Enjoy!
 [[Quick-Start]]
 == Quick Start
 
+This section summarizes how you can quickly set up Mortago on your computer
+
 === Setting Up
 .  Ensure you have `Java 11` or above installed in your Computer.
 .  Download the latest `mortago.jar` link:{repoURL}/releases[here].
@@ -46,6 +48,7 @@ Upon launching Mortago, you should see the following user interface.
 
 .User Interface of Mortago
 image::Ui.png[width="790"]
+
 
 Type the command in the command box and press kbd:[Enter] to execute it. +
 The following are examples of some commands you can try:
@@ -61,20 +64,22 @@ adds a worker named John Doe to the management system.
 [[Command-Specifications]]
 == Command Specifications
 
-Before diving into the features that Mortago has for you, you will need to know several key information on how to use Mortago. The following sections will elaborate on these key information, such as the general format for commands in Mortago.
+Before diving into the features that Mortago has for you, you need to know several key information on how to use Mortago.
+The following sections elaborate on these key information, such as the general format for commands in Mortago.
 
 === Command Format
 
 Most commands in Mortago follow the general format: `COMMAND_WORD -FLAG ATTRIBUTES`
 
 * `COMMAND_WORD` specifies what you want Mortago to do.
-** eg. `add` will tell Mortago to create an entry according to the details that you supply in the later half of the command.
+** eg. `add` tells Mortago to create an entry according to the details that you supply in the later half of the command.
 * `-FLAG` specifies what type of entity in Mortago you are referring to.
 ** There are 3 types of entities in Mortago: worker, body and fridge. Each of them has its respective `-FLAG`, given below:
 *** `-w` indicates a worker
 *** `-b` indicates a body
 *** `-f` indicates a fridge
-* `ATTRIBUTES` specifies the information about an entity that you need to supply for the command to be executed successfully. The following section will elaborate more on what `ATTRIBUTES` are in Mortago.
+* `ATTRIBUTES` specifies the information about an entity that you need to supply for the command to be executed
+successfully. The following section elaborates more on what `ATTRIBUTES` are in Mortago.
 
 === Attributes
 
@@ -90,17 +95,19 @@ The full list of attributes for each entity can be found in <<add, Section 3.1.1
 
 |===
 
-Here are some information that you will need in order to interpret the various command formats in this User Guide.
+Here are some information you need in order to interpret the various command formats in this User Guide.
 
-* You will find that `ATTRIBUTES` in this User Guide are represented with the format: `/attributeName attributeValue`
+* You can find that `ATTRIBUTES` in this User Guide are represented with the format: `/attributeName attributeValue`
 ** You should always provide the `/attributeName`, exactly as it is stated in the User Guide, before specifying the details of the `attributeValue` that the entity has.
 ** For example, date of births in Mortago are represented using `/dob dateOfBirth`. Therefore, the `/attributeName` is `/dob` and `attributeValue` is `dateOfBirth`. If you wish to specify an entity born on 12 December 2000, you should key it as `/dob 12/12/2000`.
 
 * You may find that some `ATTRIBUTES` can only accept specific values, or that these values must follow certain format. You can refer to <<Valid-Values, Appendix 7.1>> for the full list of valid values or format for these `ATTRIBUTES`.
 
-* You must enter `ATTRIBUTES` successively in a single-line command. Mortago will not prompt you to key in any mandatory `ATTRIBUTES` that you may have missed out.
+* You must enter `ATTRIBUTES` successively in a single-line command. Mortago does not prompt you to key in any mandatory
+ `ATTRIBUTES` that you may have missed out.
 
-* `ATTRIBUTES` are provided successively in commands and Mortago will not prompt you, step by step, the `ATTRIBUTES` you need to provide.
+* `ATTRIBUTES` are provided successively in commands and Mortago does not prompt you, step by step, the `ATTRIBUTES` you
+need to provide.
 * `ATTRIBUTES` in parentheses are optional.
 ** e.g. The following 2 commands are valid for the add command, with the abridged format: `add -b /name name (/religion religion /status status)`.
 *** `add -b /religion Buddhism`
@@ -176,8 +183,6 @@ add -w +
 (/photo pathToPhoto)
 ====
 
----
-
 a|
 ====
 add -f
@@ -186,7 +191,6 @@ add -f
 [TIP]
 Default status: `UNOCCUPIED`
 
----
 
 =======
 
@@ -279,16 +283,19 @@ Format: `update -FLAG /id id [/attributeName attributeValue ...]`
 
 
 
-When you update the `fridgeId` of a `Body`, changes to the fridges will be made as follows:
+When you update the `fridgeId` of a `Body`, changes to the fridges are made as follows:
 
 * Previous fridge's status is set to `UNOCCUPIED` and is no longer assigned this `Body`.
 
 * New fridge's status is set to `OCCUPIED` and is assigned this `Body`.
 
-When you update the status of a `Body` to `CONTACT_POLICE`, the `Notif` associated with the `Body` will be automatically deleted.
+When you update the status of a `Body` to `CONTACT_POLICE`, the `Notif` associated with the `Body` is automatically
+deleted.
 
-When you update `bodyStatus` to `ARRIVED`, a `Notif` pop-up will be shown after 10 seconds.
+When you update `bodyStatus` to `ARRIVED`, a `Notif` pop-up is be shown after 10 seconds.
 
+When a `Body` is assigned a `Fridge` and you update its status to `CLAIMED` or `DONATED`, it is removed from the
+ `Fridge` and its status is set to `UNOCCUPIED`.
 
 There are some attributes that you can update once the entity is created. For this command,
 the list of valid attributes and their command prefixes can be found below:
@@ -335,10 +342,14 @@ Instead of typing out all the irrelevant attributes a Worker has, you just have 
 and her new designation.
 
 To update Jane Doe's designation: +
-1. Locate her identification number on the dashboard. You see on the dashboard that her ID number is W00001. +
-2. Type `update -w /id 1 /designation Manager` into the command box, and press `Enter` to execute it. +
-3. The result box will indicate that the `delete` command has been undone. +
-4. You will also see  on the dashboard that Jane Doe's designation has been updated.
+1) Locate her identification number on the dashboard. You see on the dashboard that her ID number is W00001. +
+
+2) Type `update -w /id 1 /designation Manager` into the command box, and press `Enter` to execute it. +
+
+3) The result box indicates that the `delete` command has been undone. +
+
+4) You can also see  on the dashboard that Jane Doe's designation has been updated.
+
 
 |===
 | Command | Expected Output
@@ -355,11 +366,12 @@ To update Jane Doe's designation: +
 You can find bodies or workers whose names contain any of the given keywords by entering a find command with the given format below. +
 
 [TIP]
-* The search is case insensitive. e.g `hans` will match `Hans`
-* The order of the keywords does not matter. e.g. `Hans Bo` will match `Bo Hans`
+* The search is case insensitive. e.g `hans` matches `Hans`
+* The order of the keywords does not matter. e.g. `Hans Bo` matches `Bo Hans`
 * Only the name is searched.
-* Only full words will be matched e.g. `Han` will not match `Hans`
-* Persons matching at least one keyword will be returned (i.e. `OR` search). e.g. `Hans Bo` will return `Hans Gruber`, `Bo Yang`
+* Only full words are matched e.g. `Han` is not match `Hans`
+* Persons matching at least one keyword is returned (i.e. `OR` search). e.g. `Hans Bo` returns `Hans Gruber`, `Bo
+Yang`
 
 
 Format: `find -FLAG [keyword...]`
@@ -386,9 +398,9 @@ you want to delete a `Fridge` with id `F01`, you need to only enter `delete -f 1
 
 When you delete a `Body`:
 
-* Mortago will automatically delete its associated `Notifs`. You can learn more
+* Mortago automatically deletes its associated `Notifs`. You can learn more
 about `Notifs` in <<add, Section 3.2.1>>.
-* If you had assigned a `Fridge` to this `Body`, Mortago will automatically set the status of the `Fridge` to
+* If you had assigned a `Fridge` to this `Body`, Mortago automatically sets the status of the `Fridge` to
 `UNOCCUPIED`.
 
 You cannot delete a `Fridge` with status `OCCUPIED`. To still proceed with deletion, you need to either delete the
@@ -403,15 +415,15 @@ To delete his record:
 
 1) Type `delete -w 3` and press `ENTER` to execute it.
 
-image::delete-command/DeleteStep1.png[align="center"]
+image::delete-command/DeleteStep1.png[]
 
-2) The result box will display the message as shown below.
+2) The result box displays the message as shown below.
 
-image::delete-command/DeleteStep2.png[align="center"]
+image::delete-command/DeleteStep2.png[]
 
 3) And you can check that Jim Kerr is no longer in the list of workers.
 
-image::delete-command/DeleteStep3.png[align="center"]
+image::delete-command/DeleteStep3.png[width="500"]
 
 // end::delete
 
@@ -441,15 +453,15 @@ Format: `list -FLAG`
 Example: `list -b` +
 After filtering specific bodies, you may now want to view the full list of bodies:
 
-* 1. Mortago shows filtered list of bodies.
+1) Mortago shows filtered list of bodies.
 
 image::list1.png[]
 
-* 2. Type `list -b` in the Command Line Interface (CLI).
+2) Type `list -b` in the Command Line Interface (CLI).
 
 image::list2.png[]
 
-* 3. Mortago shows unfiltered list of bodies.
+3) Mortago shows unfiltered list of bodies.
 
 image::list3.png[]
 
@@ -496,7 +508,7 @@ notification bell or typing the `showNotif` command.
 
 Format: `showNotifs`
 
-Once you change the status of the `Body` from `CONTACT_POLICE` to any other possible status (!!!add in the section!!!),
+Once you change the status of the `Body` from `CONTACT_POLICE` to any other possible status <<bodyStatus, Section 8.1>>,
 its associated `Notif` is deleted.
 
 If you change the status of the `Body` before 10 seconds, no pop-up and `Notif` are created.
@@ -508,47 +520,49 @@ Imagine that a new `Body` (John Doe) has just arrived at your mortuary.
 1) Type the `add` command as specified in the example in <<add, Section 3.1.1>>. Currently the status of this `Body`
 is `ARRIVED`
 
-image::notif-command/Notif1.png[align="center"]
+image::notif-command/Notif1.png[]
 
 2) Wait for 10 seconds. Mortago automatically changes the status of the `Body` to `CONTACT_POLICE` and shows
 you a
 pop-up
 notification.
 
-image::notif-command/Notif2.png[align="center"]
+image::notif-command/Notif2.png[]
 
 3) Type `showNotif` and press `ENTER` to execute it.
 
-image::notif-command/Notif3.png[align="center"]
+image::notif-command/Notif3.png[]
 
 4) The notification bell opens up a panel and lists all the bodies for which you need to contact the police. You
-can see John Doe's ID number B00000011 is in the list.
+can see John Doe's ID number B00000020 is in the list.
 
-image::notif-command/Notif4.png[align="center"]
+image::notif-command/Notif4.png[]
 
-5) Suppose you have contacted the police, change the status of John Doe using the command `update -b /id 11 /status
+5) Suppose you have contacted the police, change the status of John Doe using the command `update -b /id 20 /status
 pending police report`. John Doe's ID is no longer listed in the notifs panel.
 
-image::notif-command/Notif5.png[align="center"]
+image::notif-command/Notif5.png[]
 
 // end::notifs[]
 
 ==== Filter all entries: `filter`
 You can filter all entries according to the given keywords in any of an entry’s attributes by entering a filter command with the given format below.
 
-All entries with matching keywords will be displayed. Keyword is case-insensitive.
+All entries with matching keywords are displayed. Keyword is case-insensitive.
 
-All attributes of a body or worker entry can be filtered. If more than one attribute is specified, the entries displayed must fulfill all attributes. Please refer to <<Section 3.1.1>> for the different fields available to be filtered.
+All attributes of a body or worker entry can be filtered. If more than one attribute is specified, the entries
+displayed must fulfill all attributes. Please refer to <<add, Section 3.1.1>> for the different fields available to be
+filtered.
 
 Format: `filter -FLAG [/attributeName attributeValue ...]`
 
 Example:
 
 * `filter -w /sex female` +
-All female worker entries will be displayed.
+All female worker entries are displayed.
 
 * `filter -b /cod Car Accident /sex male` +
-All body entries with car accident as the cause of death and those that are male will be displayed.
+All body entries with car accident as the cause of death and those that are male are displayed.
 // end::filter[]
 
 // tag::undoredo[]
@@ -566,7 +580,7 @@ Commands like `list` or `find` cannot be undone.
 Commands caused by automated commands, such as a `NotifCommand` can be undone and redone.
 For example, the automatic status change of a `Body` from `ARRIVED` to `CONTACT_POLICE`  is caused by an `UpdateCommand` and can be undone and redone. However, note that this feature does not support
 the `NotifCommand` itself. For example, if a `Body` was added and deleted before the `NotifCommand` associated with it has executed,
-undoing the deletion will not restore the `NotifCommand`.
+undoing the deletion does not restore the `NotifCommand`.
 
 Though you can `undo` a `clear` command, note that you cannot redo any past undone commands after that.
 
@@ -638,9 +652,9 @@ Format: `sort /order order`
 Example:
 
 * `sort /order status` +
-All entries will be sorted and grouped according to their statuses.
+All entries are sorted and grouped according to their statuses.
 * `sort /order id asc` +
-All entries will be sorted according to their id number in ascending order.
+All entries are sorted according to their id number in ascending order.
 
 // tag::documentGeneration[]
 === Document Generation
@@ -725,22 +739,24 @@ The statistics appear in graphical form as a line-chart on the main page of the 
 The following are the correct formats for typing in stats commands, with example usage:
 
 * To display the last 10 days: `stats` +
-The line chart will display statistics over the last 10 days. The line chart will appear as below:
+The line chart displays statistics over the last 10 days. The line chart appears as below:
 
 image::statsTenDays.png[width="790"]
 
 * To display a specific week: `stats /week 25/10/2019` +
-The line chart will display statistics for the week which contains the specified day. In this case, it is the date 12/10/2019. The line chart will appear as below:
+The line chart displays statistics for the week which contains the specified day. In this case, it is the date
+12/10/2019. The line chart appears as below:
 
 image::statsWeek.png[width="790"]
 
 * To display a specific month: `stats /month 5/2019` +
-The line chart will display statistics or the month specified. In this case, it is May 2019. The line chart will appear as below:
+The line chart displays statistics or the month specified. In this case, it is May 2019. The line chart appears
+as below:
 
 image::statsMonth.png[width="790"]
 
 * To display a specific year: `stats /year 2019` +
-The line chart will display statistics for the year specified. In this case is it 2019. The line chart will appear as below:
+The line chart displays statistics for the year specified. In this case is it 2019. The line chart appears as below:
 
 image::statsYear.png[width="790"]
 
@@ -922,6 +938,7 @@ Format: `help`
 // tag::appendix[]
 == Appendix
 
+[[bodyStatus]]
 === Valid values for various `ATTRIBUTES`
 
 anchor:Valid-Values[]
@@ -977,17 +994,18 @@ A valid NRIC number has 9 alphanumeric letters in total, with an alphabetic lett
 
 anchor:Copy-File-Path[]
 
-The following steps will guide you to copy the absolute path of a file into the clipboard.
+The following steps guide you to copy the absolute path of a file into the clipboard.
 
 
 * For *Windows* User:
 . Navigate to the image file you wish to upload.
 . While holding down kbd:[Shift], right-click on the image file.
-. In the menu that appears, click `Copy as path`. The absolute path of the file will be copied into your clipboard.
+. In the menu that appears, click `Copy as path`. The absolute path of the file is copied into your clipboard.
 
 * For *Mac* User:
 . Navigate to the image file you wish to upload.
 . Right-click on the image file, then hold down the kbd:[Option] button.
-. In the menu that appears, click `Copy <file name> as Pathname`. The absolute path of the file will be copied into your clipboard.
+. In the menu that appears, click `Copy <file name> as Pathname`. The absolute path of the file is copied into your
+clipboard.
 
 // end::appendix[]
