Apply suggestions from code review
Co-Authored-By: dorcastan <46101221+dorcastan@users.noreply.github.com>

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -570,7 +570,7 @@ image::DeleteFolderCommandUi2.png[]
 // More details about command constraints
 ****
 * `FOLDER_NAME` must start with an alphanumeric character, and can only contain alphanumeric characters and spaces.
-* `FOLDER_NAME` must exist be an existing folder.
+* `FOLDER_NAME` must be an existing folder.
 * `FOLDER_NAME` must not contain other bookmarks/subfolders (or else they would be lost).
 * `FOLDER_NAME` must not be `ROOT`, as it is the ancestor of all folders.
 ****
