--- a/docs/team/carbongrid.adoc
+++ b/docs/team/carbongrid.adoc
@@ -15,14 +15,14 @@ ClerkPro is a desktop application designed for ease of managing clinic's appoint
 
 * *Major enhancement (Largest Contribution): Major Rework on User Interface (UI) with AutoComplete with flags.*
 ** What it does: Reduces the mental workload & visual fatigue of user from having to carefully type commands and double checking the typed command or the user guide for supported commands and parameters.
-** Justification: Enhances the user experience (UX) design significantly because it provides optimal focus on primary tasks at hand to reduce visual and cognitive expenditure.
+** Justification: Enhances user experience (UX) design significantly because it provides optimal focus on primary tasks at hand to reduce visual and cognitive expenditure.
 ** Highlights: Affects interaction against existing UI components as the traversal have to be critically handled from component to component.
 ** Credits: None
 
 * *Major enhancement: Reactive Search (Proposal & UX Concept)*
-** What it does: Prevents un-necessary waiting by the user.
-** Justification: Enhances the UX significantly as user no longer waits to preview the number of possible results.
-** Highlights: Reactive Search should not block the main UI from user upon processing large data-sets.
+** What it does: Gives the user an instant preview of the search result. Prevents UI from locking up upon time-consuming processing.
+** Justification: Enhances UX significantly as user no longer have to wait for application to completely finish searching before giving new inputs.
+** Highlights: Requires understanding the process of JavaFX main application thread and plan to defer updates in a way that is not disruptive to UX of other components.
 ** Credits: SakuraBlossom (Threading and Logic), Google & Chrome DevTools Console (Inspiration)
 
 * *Minor enhancement*: added history for the CLI that allows the user to navigate to previous commands using up/down keys.
@@ -54,6 +54,7 @@ ClerkPro is a desktop application designed for ease of managing clinic's appoint
 include::../UserGuide.adoc[tag=quickStart]
 ====
 include::../UserGuide.adoc[tag=autoCompleteAndHistoryUG]
+include::../UserGuide.adoc[tag=reactiveSearchUG]
 ====
 
 == Contributions to the Developer Guide
